--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,24 @@ body{
   color: var(--gray-dark);
 }
 
+/* Adding CSS manually is only necessary in JSFiddle,
+   where CSS can't be inserted into the <head> */
+
+@keyframes typedjsBlink{
+  50% { opacity: 0.0; }
+}
+@-webkit-keyframes typedjsBlink{
+  0% { opacity: 1; }
+  50% { opacity: 0.0; }
+  100% { opacity: 1; }
+}
+.typed-fade-out{
+  opacity: 0;
+  transition: opacity .25s;
+  -webkit-animation: 0;
+  animation: 0;
+}
+
 @media (max-width: 767.98px) {
   .offcanvas-collapse {
     position: fixed;
